<resources>
    <string name="app_name">DesafioNW</string>
    <string name="txt_title_heroes">Heroes</string>
    <string name="txt_name_heroe">Olá, meu nome é Bruno</string>
    <string name="txt_class_heroe">O clã existe a quase dez anos e com o passar do tempo estamos com muitos guerreiros em nosso clã. Com o grande crescimento comecçamos a enfrentar alguns problemas de organização e controle dos nossos guerreiros.</string>

    <string name="action_search">Pesquisar</string>
    <string name="action_remove">Deletar</string>
    <string name="tv_cad_name">Nome:</string>
    <string name="tv_cad_classe">Classe</string>
    <string name="edt_cad_classe">Ex: Mago, Lutador, Cavaleiro</string>
    <string name="tv_classe_adicionar">Adicionar</string>
    <string name="tv_cad_habilidades">Habilidades</string>
    <string name="edt_cad_habilidades">Ex: Magia Branca, Invocação</string>
    <string name="tv_habilidades_adicionar">Adicionar</string>
    <string name="tv_cad_vida">Vida</string>
    <string name="tv_cad_defesa">Defesa</string>
    <string name="tv_cad_dano">Dano</string>
    <string name="tv_cad_velo_ataque">Velocidade de ataque</string>
    <string name="tv_cad_velo_movimento">Velocidade de movimento</string>
    <string name="btn_cad_salvar">Salvar</string>
</resources>
