<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgLight"
    tools:context=".activity.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        >

        <Button
            android:id="@+id/btn_addavatar_id"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add_24dp"
            android:drawableStart="@drawable/ic_add_24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_heroi_avatar"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight="1" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_cad_name"
            android:textSize="14sp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />

        <EditText
            android:id="@+id/edt_heroi_nome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@android:color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_cad_classe"
            android:textSize="14sp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/edt_heroi_classes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/edt_cad_classe"
                android:enabled="false"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="13sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:gravity="center"
                android:onClick="openDialogClasse"
                android:text="@string/tv_classe_adicionar"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_cad_habilidades"
            android:textSize="14sp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white"
            >

            <EditText
                android:id="@+id/edt_heroi_habilidades"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/edt_cad_habilidades"
                android:enabled="false"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/tv_habilidades_adicionar"
                android:gravity="center"
                android:textSize="12sp"
                android:clickable="true"
                android:textColor="@color/colorAccent"
                android:onClick="openDialogSpecialtie"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/tv_cad_vida"/>

            <EditText
                android:id="@+id/edt_heroi_vida"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/tv_cad_defesa"/>

            <EditText
                android:id="@+id/edt_heroi_defesa"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/tv_cad_dano"/>

            <EditText
                android:id="@+id/edt_heroi_dano"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_cad_velo_ataque"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

            <EditText
                android:id="@+id/edt_heroi_velo_ataque"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_cad_velo_movimento"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

            <EditText
                android:id="@+id/edt_heroi_velo_movimento"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_salvar_heroi"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_cad_salvar"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>

</LinearLayout>